# spider

./: .gitignore  .npmrc  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  rsbuild.config.ts  tsconfig.json  属性信息.json  技能信息.json  背景信息.json  角色列表.json
configs/: crawl.yaml  data.yaml
src/: App.css  App.tsx  httpsyys163comshishenindexhtml.html  index.css  index.tsx  main.rs  routes.rs  spider.json  角色信息.json  角色列表.json
src/accessors/: cloud.rs  db.rs  local.rs  mod.rs  net.rs
src/assets/locales/: zh-CN.json
src/components/: CompactMenu.tsx  Mapper.tsx  MapperPane.tsx  Mapping.tsx  MappingPane.tsx  Menu.tsx
src/containers/: CollapsePane.tsx  ColumnLayout.tsx  JuLayout.tsx  RowLayout.tsx
src/contexts/: GlobalProvider.tsx  LocaleProvider.tsx  ThemeProvider.tsx
src/core/: engine.rs  mod.rs  spider.rs
src/dbm/: client.rs  core.rs
src/handlers/: mod.rs  task.rs  user.rs
src/icons/: Balloon.tsx  CollapseDown.tsx  CollapseUp.tsx  CompactDown.tsx  CompactUp.tsx  IconBalloon.tsx  IconClear.tsx  IconCollapseDown.tsx  IconCollapseUp.tsx  IconCompactDown.tsx  IconCompactUp.tsx  IconEdit.tsx  IconExtractor.tsx  IconInfo.tsx  IconMapper.tsx  IconMapping.tsx  IconPlus.tsx  IconQuestion.tsx  IconSave.tsx  Plus.tsx  TextIcon.tsx
src/models/: entity.rs  mod.rs  transfer.rs
src/routers/: routes.rs
src/services/: mod.rs  work.rs
src/states/: cloud.rs  local.rs  mod.rs  mysql.rs
src/tasks/: action.rs  dto.rs  mod.rs
src/utils/: cloud.rs  crawl.rs  crypt.rs  datetime.rs  global.rs  info.rs  mod.rs  mysql.rs  schedule.rs
src/widgets/: Button.tsx  Information.tsx  Input.tsx  Popover.tsx  Select.tsx  Tag.tsx
tests/: handler_user_test.rs  test.txt
tests/integrations/: task.rs
(+5 files in other folders)
