[package]
name = "spider"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["tokio"]}
md5 = "0.7.0"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["cookies", "json"] }
scraper = "0.19.0"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tokio = {version = "1.38.0", features = ["full"]}
serde = { version = "1.0.203", features = ["derive"] }
soft-aes = "0.2.2"
base64 = "0.22.1"
qiniu-sdk = {version = "0.2.4", features = ["reqwest", "async", "apis","upload"]}
sqlx = {version = "0.7.4",features = ["runtime-tokio", "mysql"]}
chrono = "0.4.38"
