[package]
name = "spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = { version = "0.1.2", features = [] }
quick-xml = "0.35.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = [] }
scraper = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
